--- a/playbook/rvfm_playbook.yaml
+++ b/playbook/rvfm_playbook.yaml
@@ -17,6 +17,8 @@
         - git
         - gunicorn
         - software-properties-common
+        - libffi-dev
+        - libssl-dev
 
     - name: add certbot repo
       apt_repository:
